Ksalazar prime number (#17)
* add prime numbers service

* Add prime number java

* Add prime number node
